added user registration with mail

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
-PORT=
-MONGOURL=
-SALT_ROUNDS=
+BASEURL=http://localhost:3000
+PORT=3000
+
+MONGOURL=mongodb://localhost:27017/computing-rooms
+
+SALT_ROUNDS=10 number of rounds you want to hash passwords. more rounds more time
+
+MAIL_SENDER=mail@organization mail you use to send mails
+MAIL_SENDER_SERVICE=gmail
+MAIL_SENDER_PASSWORD=oauth2 password given by your service if necessary
+
+SECRET_PASSWORD_MAIL_REGISTRATION=secret key to hash the JWT sent by mail to confirm registration
